--- a/demo.ipynb
+++ b/demo.ipynb
@@ -17,6 +17,24 @@
    "source": [
     "print(\"demo\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "03ae1710-2a12-45ac-a5a5-eefa4ddc4d33",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(\"demo2\")"
+   ]
   }
  ],
  "metadata": {
